# can-explorer

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  canopy.py  config.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml  test.yml  tox.yml
canopy/: canopy.py
canopy_viz/: canopy.py  cli.py
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
scripts/: mcp_example.ino
src/can_explorer/: __init__.py  __main__.py  app.py  can_bus.py  canopy.py  cli.py  config.py  configs.py  controller.py  controllers.py  layout.py  model.py  models.py  plotting.py  tags.py  threads.py  ui_builder.py  view.py  views.py
src/can_explorer/resources/: __init__.py  demo.py
tests/: conftest.py  test_app.py  test_controller.py  test_gui.py  test_xapp.py
tests/resources/: __init__.py  gui_components.py
